--- a/wp-content/themes/understrap-child/sass/theme/dev_utilities/devstyles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/dev_utilities/devstyles.scss
@@ -57,7 +57,7 @@ font-size: ms(3.9);
 }
 
 #trend-arrow svg#Layer_1{
-    fill: $tungsten;
+    fill: $dark-sea-green;
     width: 105%;
     margin-left: -3rem;
     margin-top: 35rem;
