--- a/wp-content/themes/understrap-child/sass/theme/dev_utilities/palette.scss
+++ b/wp-content/themes/understrap-child/sass/theme/dev_utilities/palette.scss
@@ -72,7 +72,7 @@ $color-14: #fff;
 // $color3: rgba(66, 129, 164, 1);
 // $color4: rgba(108, 186, 217, 1);
 // $color5: rgba(62, 146, 204, 1);
-// $pattens: #DAEAF7;
+// $primary: #DAEAF7;
 
 
 /* Color Theme Swatches in Hex */
