--- a/wp-content/themes/understrap-child/sass/theme/partials/_contact_article_layout_template.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_contact_article_layout_template.scss
@@ -53,9 +53,9 @@
 }
 
 #respond > form > input[type="submit"]:nth-child(7) {
-    background: $tungsten;
+    background: $dark-sea-green;
     -webkit-appearance: none;
-    border: 1px solid $tungsten;
+    border: 1px solid $dark-sea-green;
     border-radius: 5px;
     // padding: $rvr-_25 $ms-_5;
     color: $gray-600;
