--- a/wp-content/themes/understrap-child/sass/theme/partials/variables/_style_assets.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/variables/_style_assets.scss
@@ -33,6 +33,12 @@ background:
     }
     
 
+@mixin az-subtle{
+      background-color: #ffffff;
+      background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/05/az-subtle.png");
+      // background-size: cover;
+      // background-repeat: repeat;
+      }
  
  
  /*=============================================
