--- a/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
@@ -96,11 +96,6 @@
 }
 
 .container.container--splash {
-  height: 95vh;
-  margin-top: 5vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 
   // align-items: flex-start;
 }
@@ -128,9 +123,9 @@
 .container.container--splash-homepage {
   display: flex;
   flex-direction: column;
-  height: 70%;
+  height: 100%;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   @include mq('tablet-wide'){
     flex-direction: row;
   }
@@ -140,6 +135,13 @@
 //   flex: 0 0 auto;
 //   @include vr($margin-bottom: 1);
 // }
+
+.home__splash-header_container{
+margin-top: auto;
+@include mq('tablet-wide'){
+  margin-top: unset;
+}
+}
 
 .home__splash-header_container, .home__splash-label_container {
   flex: 0 0 auto;
@@ -1409,7 +1411,6 @@ ul.strengths__list_container {
 //
 
 .article--services-splash {
-  height: 100vh;
   flex-direction: column;
   align-items: center;
   @include mq('tablet-wide'){
@@ -1581,7 +1582,7 @@ svg#services__arrow--img {
 .services__panel_copy {
   @include vr($margin: 0 auto 5 auto, $padding: 0 1);
 
-  border: 0.15em $pattens solid;
+  border: 0.15em $primary solid;
   width: 63%;
   max-width: 63%;
 
@@ -2143,7 +2144,7 @@ max-width: 100%;
   // height: 100%;
   // position: absolute;
   // width: 25%;
-  // background: $pattens;
+  // background: $primary;
   // z-index: -1;
   // left: -2em;
   // top: -2em;
@@ -2576,7 +2577,7 @@ display: flex;
   //   z-index: 3;
   //   // @include vr($padding: 4 3 4 3);
   //     background: $black;
-  //   // color: $tungsten;
+  //   // color: $dark-sea-green;
   //   display: flex;
   //   flex-direction: column;
   //   align-items: center;
@@ -2601,7 +2602,7 @@ display: flex;
   // // }
 
   //   li.services__list-item--webdev{
-  //   color: $tungsten;
+  //   color: $dark-sea-green;
   // }
 
   //
@@ -2647,7 +2648,7 @@ display: flex;
   // max-width: 100%;
   // overflow:hidden;
   // left: 0;
-  // background: $pattens;
+  // background: $primary;
   // }
 
   // .services-panel__bgimg-container_wide-screen--planning{
