--- a/wp-content/themes/understrap-child/sass/theme/partials/mixins/_bp_and_query_definitions_mixins.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/mixins/_bp_and_query_definitions_mixins.scss
@@ -139,7 +139,8 @@ $mq-retina: "(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)";
 @mixin      legal {                       @include vr($font-size: 8px); }
 @mixin      legal-lg {                    @include vr($font-size: 10px); }
 
-@mixin      list-head {                   @include vr($font-size: 2,        $margin-top:2, $margin-bottom:1); }
+@mixin      list-head {                   @include vr($font-size: 2,        $margin-top:2, $margin-bottom:.5); }
+@mixin      list__subhead {               @include vr($font-size: 1,        $margin-top:.5, $margin-bottom:1, $line-height: 2); }
 @mixin      list-head-lg {                @include vr($font-size: 20px); }
 @mixin      list-item {                   @include vr($font-size: 12px,     $margin-bottom:0.75); }
 @mixin      list-item-lg {                @include vr($font-size: 16px,     $margin-bottom:1); }
@@ -157,6 +158,8 @@ $mq-retina: "(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)";
 @mixin      sublist-lg {                  @include vr($font-size: 36px,     $margin:2 0); }
 @mixin      sublist-sm {                  @include vr($font-size: 14.5px,   $line-height:2); }
 
+@mixin      title__jumbo {                @include vr($font-size: 11); }
+
 @mixin      title {                       @include vr($font-size: 8,        $margin:2 0, $line-height:3.5); }
 @mixin      header__title {               @include vr($font-size: 8,        $margin:2 0, $line-height:3.5); }
 @mixin      block__title {                @include vr($font-size: 7,        $margin:2 0, $line-height:3.5); }
@@ -168,8 +171,8 @@ $mq-retina: "(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)";
 @mixin      link__text {                  @include vr($font-size: 2,       $line-height: 1.5); }
 @mixin      visual-title{                 @include vr($font-size: 2);}
 
-
-
+@mixin      greeting {                    @include vr($font-size: 5, $line-height: 5);}
+  
 @mixin text-shadow{
 // text-shadow: -1px -1px 1px rgba(255,255,255,.1), 1px 1px 1px rgba(0,0,0,.5);
 text-shadow: rgb(51, 51, 51) 3px 0px 0px, rgb(51, 51, 51) 0.540302px 0.841473px 0px, rgb(51, 51, 51) -0.416147px 0.909297px 0px, rgb(51, 51, 51) -0.989992px 0.14112px 0px, rgb(51, 51, 51) -0.653644px -0.756802px 0px, rgb(51, 51, 51) 0.283662px -0.958924px 0px, rgb(51, 51, 51) 0.96017px -0.279415px 0px;
